Changed Lulliby to Nameless

--- a/index.html
+++ b/index.html
@@ -15,68 +15,70 @@
 </head>
 <body>
 
-<iframe style="display: none" width="10%" height="10%" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/296637330&amp;color=ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+<div id="wrapper">
 
-<div>
-    <pre style="font-family: 'lyricsFont'">
-    let me hear your lullaby...
-    let me hear your lullaby...
-    let me hear your...
-    let me hear your lullaby
+<div id="lyrics">
+    <pre style="font-family: 'lyricsFont'; color: #F1E9FF; margin-top: 0px">
+    damn, i’ve been up for 8 days
+    so i got lost track of time
+    in the light of the moon, alone in the room,
+    i’m all right, get fuck outta my mind
 
-    Trippin' all night, now It feels like all a blur,
-    Love the way you lull, when you run your fingers through my curls,
-    Now and then you miss it, now and then it makes you hurt
-    i love the way sing alone, runnin’ your fingers through my curls
+    too much fucking focus on me these days,
+    i can tell, i see they havin’ problems, these days,
+    you ain’t shit, so you wanna fuck up my wave
+    insecurities written all on your face
 
-    Blu blur, all a blur
-    Blu blur, all a blur
-    Blu blur, all a blur
-    Blu blur, all a blur
+    mm all these missed calls,
+    constant insults
+    i’m exhausted, I’m sick, I’m tired, I’m over bored
+    bitch i gotta feel alive, when rapping, you overboard
 
-    let me hear your lullaby
-    let me hear your lullaby
-    let me hear your lullaby
-    let me hear your lullaby
+    all these rappers just dead weight
+    i might say
+    hmm you not even comin' close to 8
 
-    i want u stay with me tonight
-    i want u stay with me tonight
-    i want u stay with me tonight
-    i want u stay with me tonight
+    you hear they calling my name
+    mmm
+    i might say
+    ooooooaaaaw
 
-    I’m bout to lose my self control
-    i’m bout to lose my peace of mind
-    ever since your heart turned to stone
-    ever since you left my side
+    now I’m done with
+    done with u
 
-    ever since you left my side
-    i just kept moving quiet
-    should i forget about the past
-    tell me what you feel inside
+    ooooooaaaaw now I’m done with
+    done with u
 
-    i now that you have new guy
-    don’t tell me about it let’s just keep it private
-    don’t u forget about the past
-    tell me what you feel inside
+    i keep my mind on the my mission
+    drugs won’t get me high like this
+    leave alone the troubled boy, with your issues
+    fuck on you, I’m focused on my vision
 
-    girl let’s just keep it private
-    sing me your lullaby
-    i want u stay with me tonight
-    i want u stay with me tonight
+    don’t you come around me,
+    I’m gonna kill your hopes, like this
+    do it easily, like this
+    Fuck bout u, gimme dat money ya bish,
+    fuck on you, I’m focused
 
-    i’m bout to lose my peace of mind
-    i’m bout to lose my self control
-    i’m bout to lose my peace of mind
-    i’m bout to lose my self control
-    ever since you left my side
-    ever since you left my side
-    i just kept moving quiet
-    I just kept moving quiet
-    should i forget about the past
-    tell me what you feel inside
+    i keep my mind on the my mission
+    drugs won’t get me high like this
+    leave alone the troubled boy, with your issues
+    fuck on you, I’m focused on my vision
+
+    don’t you come around me,
+    I’m gonna kill your hopes, like this
+    do it do it easily, like this
+    Fuck bout u, gimme dat money ya bish,
+    fuck on you, I’m focused on my mission
     </pre>
 </div>
+<div id="links" style="position: absolute; bottom: 5px;">
 
+    <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Feverthe8&color=white_transparent&size=32" style="width: 32px; height: 32px; margin-left: 40%"></iframe>
+    <pre style="color: #F1E9FF; font-family: 'lyricsFont'; margin-top: -10px;">everthe8@gmail.com</pre>
+</div>
+
+</div>
 </body>
 
 <script>
@@ -89,5 +91,7 @@
     ga('send', 'pageview');
 
 </script>
+
+
 
 </html>
