--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+<iframe style="display: none" width="10%" height="10" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/303122045&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+
 <div id="wrapper">
 
 <div id="lyrics">
