--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         }
     </style>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 
 </head>
 <body>
@@ -78,6 +80,11 @@
 
     <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Feverthe8&color=white_transparent&size=32" style="width: 32px; height: 32px; margin-left: 40%"></iframe>
     <pre style="color: #F1E9FF; font-family: 'lyricsFont'; margin-top: -10px;">everthe8@gmail.com</pre>
+
+    <div style="margin-top: -10px;">
+        <span class="glyphicon glyphicon-fire" style="color: #F1E9FF; margin-left: 30%"></span>
+        <span style="color: #F1E9FF; font-family: 'lyricsFont'">2017</span>
+    </div>
 </div>
 
 </div>
