Changed footer and lyrics indent.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: lyricsFont;
-            src: url('fonts/Quicksand-Regular.woff') format('woff') /* Pretty Modern Browsers */
+            src: url('fonts/Quicksand-Regular.woff') format('woff')
         }
     </style>
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -21,73 +21,75 @@
 
 <div id="wrapper">
 
-<div id="lyrics">
-    <pre style="font-family: 'lyricsFont'; color: #F1E9FF; margin-top: 0px">
-    damn, i’ve been up for 8 days
-    so i got lost track of time
-    in the light of the moon, alone in the room,
-    i’m all right, get fuck outta my mind
+    <div id="lyrics">
+        <pre style="font-family: 'lyricsFont'; color: #F1E9FF; margin-top: 0px">
+            damn, i’ve been up for 8 days
+            so i got lost track of time
+            in the light of the moon, alone in the room,
+            i’m all right, get fuck outta my mind
 
-    too much fucking focus on me these days,
-    i can tell, i see they havin’ problems, these days,
-    you ain’t shit, so you wanna fuck up my wave
-    insecurities written all on your face
+            too much fucking focus on me these days,
+            i can tell, i see they havin’ problems, these days,
+            you ain’t shit, so you wanna fuck up my wave
+            insecurities written all on your face
 
-    mm all these missed calls,
-    constant insults
-    i’m exhausted, I’m sick, I’m tired, I’m over bored
-    bitch i gotta feel alive, when rapping, you overboard
+            mm all these missed calls,
+            constant insults
+            i’m exhausted, I’m sick, I’m tired, I’m over bored
+            bitch i gotta feel alive, when rapping, you overboard
 
-    all these rappers just dead weight
-    i might say
-    hmm you not even comin' close to 8
+            all these rappers just dead weight
+            i might say
+            hmm you not even comin' close to 8
 
-    you hear they calling my name
-    mmm
-    i might say
-    ooooooaaaaw
+            you hear they calling my name
+            mmm
+            i might say
+            ooooooaaaaw
 
-    now I’m done with
-    done with u
+            now I’m done with
+            done with u
 
-    ooooooaaaaw now I’m done with
-    done with u
+            ooooooaaaaw now I’m done with
+            done with u
 
-    i keep my mind on the my mission
-    drugs won’t get me high like this
-    leave alone the troubled boy, with your issues
-    fuck on you, I’m focused on my vision
+            i keep my mind on the my mission
+            drugs won’t get me high like this
+            leave alone the troubled boy, with your issues
+            fuck on you, I’m focused on my vision
 
-    don’t you come around me,
-    I’m gonna kill your hopes, like this
-    do it easily, like this
-    Fuck bout u, gimme dat money ya bish,
-    fuck on you, I’m focused
+            don’t you come around me,
+            I’m gonna kill your hopes, like this
+            do it easily, like this
+            Fuck bout u, gimme dat money ya bish,
+            fuck on you, I’m focused
 
-    i keep my mind on the my mission
-    drugs won’t get me high like this
-    leave alone the troubled boy, with your issues
-    fuck on you, I’m focused on my vision
+            i keep my mind on the my mission
+            drugs won’t get me high like this
+            leave alone the troubled boy, with your issues
+            fuck on you, I’m focused on my vision
 
-    don’t you come around me,
-    I’m gonna kill your hopes, like this
-    do it do it easily, like this
-    Fuck bout u, gimme dat money ya bish,
-    fuck on you, I’m focused on my mission
-    </pre>
-</div>
-<div id="links" style="position: absolute; bottom: 5px;">
-
-    <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Feverthe8&color=white_transparent&size=32" style="width: 32px; height: 32px; margin-left: 40%"></iframe>
-    <pre style="color: #F1E9FF; font-family: 'lyricsFont'; margin-top: -10px;">everthe8@gmail.com</pre>
-
-    <div style="margin-top: -10px;">
-        <span class="glyphicon glyphicon-fire" style="color: #F1E9FF; margin-left: 30%"></span>
-        <span style="color: #F1E9FF; font-family: 'lyricsFont'">2017</span>
+            don’t you come around me,
+            I’m gonna kill your hopes, like this
+            do it do it easily, like this
+            Fuck bout u, gimme dat money ya bish,
+            fuck on you, I’m focused on my mission
+        </pre>
     </div>
 </div>
 
-</div>
+<footer class="footer" style="text-align: center">
+    <div class="container">
+        <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Feverthe8&color=white_transparent&size=32" style="width: 32px; height: 32px"></iframe>
+        <pre style="color: #F1E9FF; font-family: 'lyricsFont'; margin-top: -10px;">everthe8@gmail.com</pre>
+
+        <div style="margin-top: -10px;">
+            <span class="glyphicon glyphicon-fire" style="color: #F1E9FF"></span>
+            <span style="color: #F1E9FF; font-family: 'lyricsFont'">2017</span>
+        </div>
+    </div>
+</footer>
+
 </body>
 
 <script>
@@ -98,9 +100,6 @@
 
     ga('create', 'UA-90626572-1', 'auto');
     ga('send', 'pageview');
-
 </script>
-
-
 
 </html>
