--- a/with_widget.html
+++ b/with_widget.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="robots" value="noindex" />
+
     <meta charset="UTF-8">
     <title>Everthe8</title>
 
