Changed fonts and time to next

--- a/index.html
+++ b/index.html
@@ -8,24 +8,19 @@
     <link rel="stylesheet" type="text/css" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">
 
     <style>
-        @font-face {
-            font-family: lyricsFont;
-            src: url('fonts/Quicksand-Regular.woff') format('woff')
-        }
         .container { width: 100% }
-
         p { text-align: center }
     </style>
 </head>
 <body>
 
-<iframe style="display: none" width="10%" height="10" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/303122045&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+<!--<iframe style="display: none" width="10%" height="10" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/303122045&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>-->
 
 <div id="wrapper" class="container" style="color: #F1E9FF;">
     <div class="row">
         <div class="col-6">
     <div id="lyrics">
-        <pre style="font-family: 'lyricsFont'; color: #F1E9FF; margin-top: 0px">
+        <pre style='font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; color: #F1E9FF; margin-top: 0px'>
             damn, i’ve been up for 8 days
             so i got lost track of time
             in the light of the moon, alone in the room,
@@ -124,11 +119,10 @@
 <footer class="footer" style="text-align: center">
     <div class="container">
         <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Feverthe8&color=white_transparent&size=32" style="width: 32px; height: 32px"></iframe>
-        <pre style="color: #F1E9FF; font-family: 'lyricsFont'; margin-top: -10px;">everthe8@gmail.com</pre>
+        <p style="color: #F1E9FF;  margin-top: -10px;">everthe8@gmail.com</p>
 
-        <div style="margin-top: -10px;">
-            <span class="glyphicon glyphicon-fire" style="color: #F1E9FF"></span>
-            <span style="color: #F1E9FF; font-family: 'lyricsFont'">2017</span>
+        <div style="margin-top: -15px;">
+            <p style="color: #F1E9FF">2017</p>
         </div>
     </div>
 </footer>
