--- a/index.html
+++ b/index.html
@@ -79,26 +79,26 @@
         <div class="col-6 h1 m-b-0" style="color: #F1E9FF;">
             <div class="row align-items-end" style="height: 20%">
 
-                <div class="col-3">
+                <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-3">
                 </div>
 
-                <div class="col-1">
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-1">
                     <p id="days" >drd4life</p>
                 </div>
                 <p>:</p>
-                <div class="col-1">
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-1">
                     <p id="hours">drd4life</p>
                 </div>
                 <p>:</p>
-                <div class="col-1">
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-1">
                     <p id="minutes">drd4life</p>
                 </div>
                 <p>:</p>
-                <div class="col-1">
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-1">
                     <p id="seconds">drd4life</p>
                 </div>
                 <p>:</p>
-                <div class="col-1">
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-1">
                     <p id="milliseconds">drd4life</p>
                 </div>
             </div>
