--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" type="text/css" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/country.css">
 </head>
-<body style='background-image: url("pics/country_without_label.jpg"); background-position-x: center;'>
+<body>
 
 <div class="container h1" style="color: white; text-align: center">
 
 
     <!-- Ссылка на трек -->
-    <iframe id="another_song_link" style="visibility: hidden" width="1000px" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305233389&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false"></iframe>
+    <iframe id="another_song_link" width="1000px" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305233389&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false"></iframe>
 
-    <div id="timer_div" class="row justify-content-center" style="color:#F1E9FF">
+    <!--<div id="timer_div" class="row justify-content-center" style="color:#F1E9FF">
 
         <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
             <p id="days" >00</p>
@@ -36,7 +36,7 @@
         <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
             <p id="milliseconds">00</p>
         </div>
-    </div>
+    </div>-->
 </div>
 
 </body>
@@ -51,6 +51,6 @@
     ga('send', 'pageview');
 </script>
 
-<script src="timer.js"></script>
+<!--<script src="timer.js"></script>-->
 
 </html>
