Centered widget and added padding for background

--- a/timer.html
+++ b/timer.html
@@ -13,27 +13,32 @@
 </head>
 <body>
 
-    <blockquote class="blockquote blockquote-reverse">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <p id="days" class="h1 m-b-0" >drd4life</p> <p>:</p>
-                </div>
-                <div class="col">
-                    <p id="hours" class="h1 m-b-0">drd4life</p> <p>:</p>
-                </div>
-                <div class="col">
-                    <p id="minutes" class="h1 m-b-0">drd4life</p> <p>:</p>
-                </div>
-                <div class="col">
-                    <p id="seconds" class="h1 m-b-0">drd4life</p> <p>:</p>
-                </div>
-                <div class="col">
-                    <p id="milliseconds" class="h1 m-b-0">drd4life</p>
-                </div>
+    <div class="text-center">
+
+        <iframe id="another_song_link" width="1000px" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305233389&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false"></iframe>
+
+        <div id="timer_div" class="row justify-content-center" style="color:#F1E9FF">
+            <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
+                <p id="days" >00</p>
+            </div>
+            <p>:</p>
+            <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
+                <p id="hours">00</p>
+            </div>
+            <p>:</p>
+            <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
+                <p id="minutes">00</p>
+            </div>
+            <p>:</p>
+            <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
+                <p id="seconds">00</p>
+            </div>
+            <p>:</p>
+            <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
+                <p id="milliseconds">00</p>
             </div>
         </div>
-    </blockquote>
+    </div>
 
     <script src="timer.js"></script>
 </body>
