--- a/index.html
+++ b/index.html
@@ -7,38 +7,12 @@
     <link rel="stylesheet" type="text/css" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/country.css">
 </head>
+
 <body>
-
-<div class="container h1" style="color: white; text-align: center">
-
-
-    <!-- Ссылка на трек -->
-    <iframe id="another_song_link" width="1000px" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305233389&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false"></iframe>
-
-    <!--<div id="timer_div" class="row justify-content-center" style="color:#F1E9FF">
-
-        <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
-            <p id="days" >00</p>
-        </div>
-        <p>:</p>
-        <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
-            <p id="hours">00</p>
-        </div>
-        <p>:</p>
-        <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
-            <p id="minutes">00</p>
-        </div>
-        <p>:</p>
-        <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
-            <p id="seconds">00</p>
-        </div>
-        <p>:</p>
-        <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
-            <p id="milliseconds">00</p>
-        </div>
-    </div>-->
-</div>
-
+    <div class="text-center">
+        <iframe width="1000px" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305233389&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
+        </iframe>
+    </div>
 </body>
 
 <script>
@@ -50,7 +24,5 @@
     ga('create', 'UA-90626572-1', 'auto');
     ga('send', 'pageview');
 </script>
-
-<!--<script src="timer.js"></script>-->
 
 </html>
