--- a/index.html
+++ b/index.html
@@ -10,8 +10,23 @@
 
 <body>
     <div class="text-center">
+        <!--[if gte IE 9]><!-->
         <iframe width="1000px" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305233389&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
         </iframe>
+
+        <script>
+            document.body.style.backgroundPosition = "center 100px";
+        </script>
+        <!--<![endif]-->
+
+        <!--[if lt IE 9 ]>
+        <a href="https://soundcloud.com/everthe8/country-hit">
+            <img src="pics/white_transparent_64-94fc761.png" width="64" height="64" alt="Listen on soundcloud">
+        </a>
+        <script>
+            document.body.style.backgroundPosition = "center 50px";
+        </script>
+        <![endif]-->
     </div>
 </body>
 
