Added listen glyphicon for ie8 and a link for earlier

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title>Everthe8</title>
 
     <link rel="stylesheet" type="text/css" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/country.css">
 </head>
 
 <body>
+
     <div class="text-center">
         <!--[if gte IE 9]><!-->
         <iframe width="1000px" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305233389&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
@@ -19,14 +21,23 @@
         </script>
         <!--<![endif]-->
 
-        <!--[if lt IE 9 ]>
-        <a href="https://soundcloud.com/everthe8/country-hit">
-            <img src="pics/white_transparent_64-94fc761.png" width="64" height="64" alt="Listen on soundcloud">
+        <!--[if IE 8]>
+        <a href="https://vk.com/everthe8?w=wall-129291051_204">
+            <span class="fa fa-vk fa-5x" style="color: #F1E9FF;"></span>
+        </a>
+        <script>
+            document.body.style.backgroundPosition = "center 100px";
+        </script>
+        <!--<![endif]-->
+
+        <!--[if lt IE 8 ]>
+        <a href="https://vk.com/everthe8?w=wall-129291051_204" style="color: #F1E9FF;">
+            <h2>Listen in vkontakte<h2>
         </a>
         <script>
             document.body.style.backgroundPosition = "center 50px";
         </script>
-        <![endif]-->
+        <!--<![endif]-->
     </div>
 </body>
 
