Added missed glyphicons + debugged for old browsers

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
         <!--[if IE 8]>
         <a href="https://vk.com/everthe8?w=wall-129291051_204">
-            <span class="fa fa-vk fa-5x" style="color: #F1E9FF;"></span>
+            <span class="fa fa-vk fa-5x" style="color: whitesmoke;"></span>
         </a>
         <script>
-            document.body.style.backgroundPosition = "center 100px";
+            document.body.style.backgroundPosition = "center 90px";
         </script>
         <!--<![endif]-->
 
         <!--[if lt IE 8 ]>
-        <a href="https://vk.com/everthe8?w=wall-129291051_204" style="color: #F1E9FF;">
-            <h2>Listen in vkontakte<h2>
+        <a href="https://vk.com/everthe8?w=wall-129291051_204">
+            <h2 style="padding-top: 1%;color: whitesmoke">Listen in vkontakte<h2>
         </a>
         <script>
             document.body.style.backgroundPosition = "center 50px";
