--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </iframe>
 
         <script>
-            document.body.style.backgroundPosition = "center 100px";
+            document.body.style.backgroundPosition = 'center 100px';
         </script>
         <!--<![endif]-->
 
@@ -26,29 +26,30 @@
             <span class="fa fa-vk fa-5x" style="color: whitesmoke;"></span>
         </a>
         <script>
-            document.body.style.backgroundPosition = "center 90px";
+            document.body.style.backgroundPosition = 'center 90px';
         </script>
-        <!--<![endif]-->
+        <![endif]-->
 
         <!--[if lt IE 8 ]>
         <a href="https://vk.com/everthe8?w=wall-129291051_204">
-            <h2 style="padding-top: 1%;color: whitesmoke">Listen in vkontakte<h2>
+            <h2 style="padding-top: 1%;color: whitesmoke">Listen in vkontakte</h2>
         </a>
         <script>
-            document.body.style.backgroundPosition = "center 50px";
+            document.body.style.backgroundPosition = 'center 50px';
         </script>
-        <!--<![endif]-->
+        <![endif]-->
+
     </div>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-90626572-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
-
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-90626572-1', 'auto');
-    ga('send', 'pageview');
-</script>
 
 </html>
