--- a/index.html
+++ b/index.html
@@ -2,59 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <meta name="description" content="Everthe8's web page">
+    <meta name="keywords" content="Everthe8,$ecret joint,Secret joint,Outside">
+
     <title>Everthe8</title>
 
-    <link rel="stylesheet" type="text/css" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="css/country.css">
+    <link rel="stylesheet" type="text/css" href="css/secret_joint.css">
 </head>
-
 <body>
-
-    <div class="text-center">
-        <!--[if gte IE 9]><!-->
-
+<div id="container" class="center">
+    <div style="width: 80vmin;" id="track_div" class="center">
         <iframe width="100%"
                 height="100"
                 scrolling="no"
                 frameborder="no"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/306365005&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308966992&amp;scheme=242424&amp;color=242424&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
         </iframe>
-
-        <script>
-            document.body.style.backgroundPosition = 'center 100px';
-        </script>
-        <!--<![endif]-->
-
-        <!--[if IE 8]>
-        <a href="https://vk.com/everthe8?w=wall-129291051_204">
-            <span class="fa fa-vk fa-5x" style="color: whitesmoke;"></span>
-        </a>
-        <script>
-            document.body.style.backgroundPosition = 'center 90px';
-        </script>
-        <![endif]-->
-
-        <!--[if lt IE 8 ]>
-        <a href="https://vk.com/everthe8?w=wall-129291051_204">
-            <h2 style="padding-top: 1%;color: whitesmoke">Listen in vkontakte</h2>
-        </a>
-        <script>
-            document.body.style.backgroundPosition = 'center 50px';
-        </script>
-        <![endif]-->
-
     </div>
+    <img src="pics/cover_secret_joint.jpg" style="width: 80vmin;display: block;margin: auto;">
+</div>
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-90626572-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+    ga('create', 'UA-90626572-1', 'auto');
+    ga('send', 'pageview');
+</script>
+
 </body>
-
 </html>
