--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="container" class="center">
-    <div style="width: 80vmin;" id="track_div" class="center">
+    <div id="track_div" class="center">
         <iframe width="100%"
                 height="100"
                 scrolling="no"
@@ -20,7 +20,7 @@
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308966992&amp;scheme=242424&amp;color=242424&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
         </iframe>
     </div>
-    <img src="pics/cover_secret_joint.jpg" style="width: 80vmin;display: block;margin: auto;">
+    <img id="cover" src="pics/cover_secret_joint.jpg">
 </div>
 
 <script>
