--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <img id="cover" src="pics/cover_secret_joint.jpg">
 </div>
 
+<footer style="text-align: center; font-family: commonFont">
+    <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Feverthe8&color=white_transparent&size=32" style="width: 32px; height: 32px"></iframe>
+    <p style="color: #F1E9FF;  margin-top: -10px;">everthe8@gmail.com</p>
+
+    <div style="margin-top: -15px;">
+        <p style="color: #F1E9FF">2017</p>
+    </div>
+</footer>
+
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
