--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <meta name="description" content="Everthe8's web page">
-    <meta name="keywords" content="Everthe8,$ecret joint,Secret joint,Outside">
+    <meta name="keywords" content="Everthe8,gimme dat,Outside">
 
     <title>Everthe8</title>
 
@@ -17,10 +17,10 @@
                 height="100"
                 scrolling="no"
                 frameborder="no"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308966992&amp;scheme=242424&amp;color=242424&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/313584475&amp;scheme=242424&amp;color=242424&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
         </iframe>
     </div>
-    <img id="cover" src="pics/cover_secret_joint.jpg">
+    <img id="cover" src="pics/cover_gimme_dat.jpg">
 </div>
 
 <footer style="text-align: center; font-family: commonFont">
