Added sale info

--- a/index.html
+++ b/index.html
@@ -11,16 +11,41 @@
     <link rel="stylesheet" type="text/css" href="css/secret_joint.css">
 </head>
 <body>
-<div id="container" class="center">
+
+<!--<a href="https://geo.itunes.apple.com/us/album/curse/id1227917156?i=1227917163&mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//linkmaker.itunes.apple.com/assets/shared/badges/en-us/music-lrg.svg) no-repeat;width:110px;height:40px;background-size:contain;"></a>-->
+
+
+<div class="container center">
     <div id="track_div" class="center">
         <iframe width="100%"
                 height="100"
                 scrolling="no"
                 frameborder="no"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/317387436&amp;scheme=242424&amp;color=242424&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/317387436&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
         </iframe>
     </div>
     <img id="cover" src="pics/cover_curse.jpg">
+</div>
+
+<div class="container center">
+    <div class="fb fb__1" style="align-items: center;padding-top: 1vh;">
+        <div id="youtube_logo" class="fb fb__1_2">
+            <a  href="https://www.youtube.com/watch?v=7G4lcPN0VN8">
+                <img src="pics/YouTube-social-circle_red_48px.png">
+            </a>
+
+        </div>
+        <div class="fb fb__1_3">
+            <a href="https://geo.itunes.apple.com/us/album/curse/id1227917156?i=1227917163&mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//linkmaker.itunes.apple.com/assets/shared/badges/en-us/music-lrg.svg) no-repeat;width:110px;height:40px;background-size:contain;"></a>
+        </div>
+        <div class="fb fb__1_4">
+            <a href='https://play.google.com/store/music/album/Everthe8_Curse?id=Bawrqr5edimzyggejkfgxol2y2m&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' style="width:130px;height:55px;"/></a>
+        </div>
+    </div>
+
+
+
+
 </div>
 
 <footer style="text-align: center; font-family: commonFont">
