--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 </head>
 <body>
 
-<!--<a href="https://geo.itunes.apple.com/us/album/curse/id1227917156?i=1227917163&mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//linkmaker.itunes.apple.com/assets/shared/badges/en-us/music-lrg.svg) no-repeat;width:110px;height:40px;background-size:contain;"></a>-->
-
-
 <div class="container center">
     <div id="track_div" class="center">
         <iframe width="100%"
                 height="100"
                 scrolling="no"
                 frameborder="no"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/317387436&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/317387436&amp;scheme=242424&amp;color=242424&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
         </iframe>
     </div>
     <img id="cover" src="pics/cover_curse.jpg">
