Remove redundant files

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <meta name="description" content="Everthe8's web page">
     <meta name="keywords" content="Everthe8,CURSE,Outside">
 
     <title>Everthe8</title>
 
-    <link rel="stylesheet" type="text/css" href="css/secret_joint.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
@@ -39,10 +38,6 @@
             <a href='https://play.google.com/store/music/album/Everthe8_Curse?id=Bawrqr5edimzyggejkfgxol2y2m&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' style="width:130px;height:55px;"/></a>
         </div>
     </div>
-
-
-
-
 </div>
 
 <footer style="text-align: center; font-family: commonFont">
@@ -50,7 +45,7 @@
     <p style="color: #F1E9FF;  margin-top: -10px;">everthe8@gmail.com</p>
 
     <div style="margin-top: -15px;">
-        <p style="color: #F1E9FF">2017</p>
+        <p style="color: #F1E9FF">2017-2018</p>
     </div>
 </footer>
 
