Improve Chrome audit

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="description" content="Everthe8's web page">
     <meta name="keywords" content="Everthe8,CURSE,Outside">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name='theme-color' content='#030303'/>
+    <link rel="manifest" href="/manifest.json">
 
     <title>Everthe8</title>
 
@@ -13,21 +16,22 @@
 
 <div class="container center">
     <div id="track_div" class="center">
-        <iframe width="100%"
+        <iframe title="Soundcloud play widget"
+                width="100%"
                 height="100"
                 scrolling="no"
                 frameborder="no"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/317387436&amp;scheme=242424&amp;color=242424&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/317387436&amp;scheme=242424&amp;color=242424&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false&amp;show_artwork=false&amp;show_bpm=false">
         </iframe>
     </div>
-    <img id="cover" src="pics/cover_curse.jpg">
+    <img id="cover" src="pics/cover_curse.jpg" role="presentation" alt="cover of track">
 </div>
 
 <div class="container center">
     <div class="fb fb__1" style="align-items: center;padding-top: 1vh;">
         <div id="youtube_logo" class="fb fb__1_2">
-            <a  href="https://www.youtube.com/watch?v=7G4lcPN0VN8">
-                <img src="pics/YouTube-social-circle_red_48px.png">
+            <a href="https://www.youtube.com/watch?v=7G4lcPN0VN8">
+                <img src="pics/YouTube-social-circle_red_48px.png" alt="link for youtube" role="presentation">
             </a>
 
         </div>
@@ -41,7 +45,7 @@
 </div>
 
 <footer style="text-align: center; font-family: commonFont">
-    <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Feverthe8&color=white_transparent&size=32" style="width: 32px; height: 32px"></iframe>
+    <iframe title="Soundcloud link widget" allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Feverthe8&color=white_transparent&size=32" style="width: 32px; height: 32px"></iframe>
     <p style="color: #F1E9FF;  margin-top: -10px;">everthe8@gmail.com</p>
 
     <div style="margin-top: -15px;">
